--- a/templates/site.html
+++ b/templates/site.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%;margin: 0;padding-top: 1.5%;">
 <head>
     <meta charset="UTF-8">
     <title>Palechko</title>
@@ -8,12 +8,12 @@
     <link rel="icon" type="image/png" href="https://www.favicon.cc/logo3d/807558.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href=/static/css/main.css>
-</head>
-<body style="background: beige;zoom: 90%">
 
-<div class="content">
-    <div class="content-inside">
+</head>
+<body style="background: beige;zoom: 90%;height: 100%;margin: 0;padding-top: 1.5%;">
+
+<div class="content" style="min-height: 100%">
+    <div class="content-inside" style="padding: 20px;padding-bottom: 50px;">
         {% include 'header.html' %}
 
 
