--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,15 +1,15 @@
 <footer class="footer">
-    <div class="card-footer navbar-light text-center h-100" style=" background: blueviolet">
+    <div class="card-footer navbar-light text-center h-100" style=" background: blueviolet;height: 50px;margin-top: -50px;">
         <div class="row">
             <div class="col-sm"></div>
             <div class="col-sm">
             <i class="text-center" style="color: white">Python Web Frameworks Final Exam 13.12.2020 @SoftUni</i>
             </div>
             <div class="col-sm text-right">
-                <div class="container" style="margin-left: -20%">
-                <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
-                <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+                <div class="container" style="margin-left: -20%;">
+                <a style="font-weight: bold;color: white" href="#"><i class="fab fa-youtube fa-2x"></i></a>
+                <a style="font-weight: bold;color: white" href="#"><i class="fab fa-facebook fa-2x"></i></a>
+                <a style="font-weight: bold;color: white" href="#"><i class="fab fa-instagram fa-2x"></i></a>
                 </div>
             </div>
         </div>
