--- a/templates/site.html
+++ b/templates/site.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="https://www.favicon.cc/logo3d/807558.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
+    <link rel="stylesheet" href=/static/css/main.css>
 </head>
 <body style="background: beige;zoom: 90%;height: 100%;margin: 0;padding-top: 1.5%;">
 
